# rust-esp32-c3-blinky

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci-build.yml
src/: logging.rs  main.rs
