[package]
name = "rust-esp32-c3-blinky"
version = "0.1.0"
authors = ["Shahriyar Nasir <contact@snasir.ca>"]
edition = "2021"

[dependencies]
# Embassy
embassy-executor = { version = "0.6", features = ["task-arena-size-81920"]  }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.3", features = ["generic-queue"] }
embassy-net = { version = "0.4", features = ["dhcpv4", "dns", "tcp", "udp"] }

# ESP specifics
esp-alloc = { version = "0.5" }
esp-hal = { version = "0.21", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.4", features = ["esp32c3", "executors"] }
esp-backtrace = { version = "0.14", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.12", features = ["esp32c3", "log", "auto", "colors"] }
esp-wifi = { version = "0.10", features = ["esp32c3", "wifi", "async", "tcp", "ipv4", "dhcpv4", "embassy-net"] }

# Logging
log = { version = "0.4" }

# Static objects
static_cell = { version = "2" }
